# build-my-own-X

./: .gitignore
3drender/: .gitignore
3drender/demo/: .clang-format  Makefile  constant.h  geometry.h  line.h  main  main.cpp  model.cpp  model.h  output.tga  tgaimage.cpp  tgaimage.h  triangle.h
blockchain/200-l-chain/: go.mod  go.sum
blockchain/200-l-chain/cmd/: main.go
blockchain/rs-bc/: Cargo.toml
blockchain/rs-bc/src/: lib.rs  main.rs  p2p.rs
bowser/rsbs/: Cargo.toml
bowser/rsbs/src/: css.rs  dom.rs  html.rs  lib.rs  parser.rs
bt/cs/: Program.cs  bt.sln
db/gosql/: go.mod
db/gosql/pkgs/: 1.go
db/sqlitoy/: .gitignore  compile_commands.json  makefile  xmake.lua
db/sqlitoy/src/: b_tree.h  consts.h  cursor.cc  cursor.h  input_buffer.h  main.cc  meta_command.cc  meta_command.h  paper.cc  paper.h  statement.cc  statement.h  (+2 more)
games/yourcraft/: .clang-format  .gitignore  compile_commands.json  makefile  xmake.lua
games/yourcraft-rs/: Cargo.toml  index.html
games/yourcraft-rs/res/shader/: shader.wgsl  shader_1.wgsl
games/yourcraft-rs/src/: lib.rs  main.rs  state.rs  vertex.rs
texted/ced/: .clang-format  xmake.lua
vm/rsvm/: Cargo.toml
vm/rsvm/cfg/: cli.yml
vm/rsvm/lrdium/src/: main.rs  vm.rs
vm/rsvm/lrdium/src/assembler/: instruction_parser.rs  mod.rs  symbol.rs
vm/rsvm/lrdium/src/scheduler/: mod.rs
vm/rsvm/palladium/: Cargo.toml
vm/rsvm/palladium/src/: compiler.rs  expression_parser.rs  lib.rs  operand_parser.rs  operator_parser.rs  program_parser.rs  token.rs  visitor.rs
vm/rsvm/palladium/src/parser/: expression_parser.rs  factor_parser.rs  mod.rs  operand_parser.rs  operator_parser.rs  program_parser.rs  term_parser.rs
vm/rsvm/palladium/tmp/: a.json
vm/rsvm/src/: instruction.rs  lib.rs  main.rs  repl.rs  vm.rs
vm/rsvm/src/assembler/: assembler_error.rs  directive_parser.rs  instruction_parser.rs  label_parser.rs  mod.rs  opcode_parsers.rs  operand_parsers.rs  program_parser.rs  register_parsers.rs  symbol.rs
vm/rsvm/src/scheduler/: mod.rs
vm/rsvm/test/: code.iasm
vm/rsvm/tmp/: helloworld.cc  helloworld.s
vm/rsvm/vm/: Cargo.toml
vm/rsvm/vm/benches/: vm_bench.rs
vm/rsvm/vm/src/: lib.rs  main.rs  ssh.rs  vm.rs
vm/rsvm/vm/src/assembler/: directive_parser.rs  mod.rs  register_parsers.rs
vm/rsvm/vm/src/remote/: client.rs  server.rs
vm/rsvm/vm/src/repl/: command_parser.rs  mod.rs
(+40 files in other folders)
