[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vm"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
chrono = "*"
nom = "^4.0.0"
clap = { version = "2.32", features = ["yaml"] }
log = "0.4"
env_logger = "0.5.13"
byteorder = "1"
uuid = { version = "0.7", features = ["v4"] }
rand = "*"
num_cpus = "1.16.0"
thrussh = "0.20.0"
thrussh-keys = "0.9.5"
futures = "0.1.24"
tokio = "0.1.8"


[[bench]]
name = "vm_bench"
harness = false

[dev-dependencies]
criterion = "0.2"
